fix css, add new background images

--- a/_includes/page.html
+++ b/_includes/page.html
@@ -1,7 +1,7 @@
 <!-- first page -->
 {% if page.theme == 'sains' %}
 <section
-  data-background-image="../dist/theme/img/front.jpg"
+  data-background-image="../dist/theme/img/sains_bg_2.jpg"
   data-background-size="cover"
   data-background-repeat="no-repeat"
 >
