--- a/_includes/page2.html
+++ b/_includes/page2.html
@@ -1,7 +1,7 @@
 <!-- first page -->
 {% if page.theme == 'sains' %}
 <section
-  data-background-image="../dist/theme/img/front.jpg"
+  data-background-image="../dist/theme/img/sains_bg_2.jpg"
   data-background-size="cover"
   data-background-repeat="no-repeat"
 >
@@ -45,6 +45,7 @@
 {% assign file_extension = page.path | split: '.' | last %} 
 {% if file_extension == 'html' %}
   <section
+    data-background-image="../dist/theme/img/background_dark.jpg"
     data-markdown
     data-separator="^\n-next-\n$"
     data-separator-vertical="^\n-down-\n$"
