--- a/_includes/contents.html
+++ b/_includes/contents.html
@@ -1,6 +1,8 @@
 <div class="reveal">
-  <div class="sains-logo"></div>
-  
+  <!-- <div class="sains-logo"></div> -->
+  <a href="{{ page.url | relative_url }}#">
+    <div class="sains-logo"></div>
+  </a>
   <!-- Include the page.html file -->
   <div class="slides">
     {% include page2.html %}
