--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -35,12 +35,12 @@
   
   Reveal.configure({ pdfMaxPagesPerSlide: 2 });
 
-  // Create and append the "Go to Home" button
+  // // Create and append the "Go to Home" button
   // const button = document.createElement("button");
   // button.innerText = "🏠";
   // button.className = "home-button";
   // button.onclick = function () {
-  //   window.location.href = "{{ site.url }}{{ site.baseurl }}/slides/#/1";
+  //   window.location.href = "{{ page.url | relative_url }}#/1";
   // };
   // document.body.appendChild(button);
 </script>
