add bootstrap, fontawesome locally

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -12,6 +12,6 @@
 />
 <meta name="HandheldFriendly" content="True" />
 <meta name="MobileOptimized" content="320" />
-<link rel="stylesheet" href="../dist/reveal.css" />
-<link rel="stylesheet" href="../dist/theme/{{page.theme}}.css" id="theme" />
-<link rel="stylesheet" href="../plugin/highlight/{{page.highlight}}.css" />
+<link rel="stylesheet" href="{{ site.baseurl }}/dist/reveal.css" />
+<link rel="stylesheet" href="{{ site.baseurl }}/dist/theme/{{page.theme}}.css" id="theme" />
+<link rel="stylesheet" href="{{ site.baseurl }}/plugin/highlight/{{page.highlight}}.css" />
