--- a/_includes/page2.html
+++ b/_includes/page2.html
@@ -56,6 +56,8 @@
   {% if page.theme == 'sains' %}
   <section
     data-background-image="../dist/theme/img/background_dark.jpg"
+    data-background-size="cover"
+    data-background-repeat="no-repeat"
     data-markdown
     data-separator="^\n-next-\n$"
     data-separator-vertical="^\n-down-\n$"
