--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -5,16 +5,16 @@
     <link rel="icon" href="{{ site.baseurl }}/assets/favicon.png" type="image/png" />
     <link
       rel="stylesheet"
-      href="{{ site.baseurl }}/dist/all.min.css"
+      href="{{ site.baseurl }}/dist/css/all.min.css"
       type="text/css"
     />
     <!-- Latest compiled and minified CSS -->
     <link
-      href="{{ site.baseurl }}/dist/bootstrap.min.css"
+      href="{{ site.baseurl }}/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <!-- Latest compiled JavaScript -->
-    <script src="{{ site.baseurl }}/js/bootstrap.bundle.min.js"></script>
+    <script src="{{ site.baseurl }}/dist/js/bootstrap.bundle.min.js"></script>
 
     <style>
       html,
