--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,8 +1,8 @@
-<script src="../dist/reveal.js"></script>
-<script src="../plugin/markdown/markdown.js"></script>
-<script src="../plugin/highlight/highlight.js"></script>
-<script src="../plugin/notes/notes.js"></script>
-<script src="../plugin/math/math.js"></script>
+<script src="{{ site.baseurl }}/dist/reveal.js"></script>
+<script src="{{ site.baseurl }}/plugin/markdown/markdown.js"></script>
+<script src="{{ site.baseurl }}/plugin/highlight/highlight.js"></script>
+<script src="{{ site.baseurl }}/plugin/notes/notes.js"></script>
+<script src="{{ site.baseurl }}/plugin/math/math.js"></script>
 <script>
   n = new Date();
   y = n.getFullYear();
@@ -21,12 +21,12 @@
     viewDistance: 3,
     slideNumber: "c/t",
     transition: "slide",
-    math: {
-      mathjax:
-        "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js",
-      config: "TeX-AMS_HTML-full", // See http://docs.mathjax.org/en/latest/config-files.html
-      extensions: ["AMSmath.js"],
-    },
+    // math: {
+    //   mathjax:
+    //     "https://cdn.jsdelivr.net/npm/mathjax@3.2.2/es5/tex-mml-chtml.min.js",
+    //   config: "TeX-AMS_HTML-full", // See http://docs.mathjax.org/en/latest/config-files.html
+    //   extensions: ["AMSmath.js"],
+    // },
     markdown: {
       smartypants: true,
     },
