add bootstrap, fontawesome locally

--- a/_includes/page2.html
+++ b/_includes/page2.html
@@ -1,7 +1,7 @@
 <!-- first page -->
 {% if page.theme == 'sains' %}
 <section
-  data-background-image="../dist/theme/img/sains_bg_2.jpg"
+  data-background-image="{{ site.baseurl }}/dist/theme/img/sains_bg_2.jpg"
   data-background-size="cover"
   data-background-repeat="no-repeat"
 >
@@ -55,7 +55,7 @@
 {% if file_extension == 'html' %}
   {% if page.theme == 'sains' %}
   <section
-    data-background-image="../dist/theme/img/background_dark.jpg"
+    data-background-image="{{ site.baseurl }}/dist/theme/img/background_dark.jpg"
     data-background-size="cover"
     data-background-repeat="no-repeat"
     data-markdown
