add bootstrap, fontawesome locally

--- a/_includes/page2.html
+++ b/_includes/page2.html
@@ -11,15 +11,15 @@
       <h1 class="rightside">{{page.title}}</h1>
       <br />
       {% if page.description %}
-      <p class="rightside">{{page.description}}</p>
+      <p class="rightside">🏷️ {{page.description}}</p>
       <br />
       {% endif %}
       <hr />
       {% if page.location%}
-      <p class="rightside">{{page.location}}</p>
+      <p class="rightside">🏢 {{page.location}}</p>
       {% endif %}
       {% if page.date%}
-      <p class="rightside">{{page.date}}</p>
+      <p class="rightside">📅 {{page.date}}</p>
       {% else %}
       <p class="rightside" id="date"></p>
       {% endif %}
@@ -33,15 +33,15 @@
       <h1 class="rightside">{{page.title}}</h1>
       <br />
       {% if page.description %}
-      <p class="rightside">{{page.description}}</p>
+      <p class="rightside">🏷️ {{page.description}}</p>
       <br />
       {% endif %}
       <hr />
       {% if page.location%}
-      <p class="rightside">{{page.location}}</p>
+      <p class="rightside">🏢 {{page.location}}</p>
       {% endif %}
       {% if page.date%}
-      <p class="rightside">{{page.date}}</p>
+      <p class="rightside">📅 {{page.date}}</p>
       {% else %}
       <p class="rightside" id="date"></p>
       {% endif %}
