--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -17,16 +17,16 @@
     history: true,
     center: true,
     autoPlayMedia: false,
-    touch: true,
+    touch: false,
     viewDistance: 3,
     slideNumber: "c/t",
     transition: "slide",
-    // math: {
-    //   mathjax:
-    //     "https://cdn.jsdelivr.net/npm/mathjax@3.2.2/es5/tex-mml-chtml.min.js",
-    //   config: "TeX-AMS_HTML-full", // See http://docs.mathjax.org/en/latest/config-files.html
-    //   extensions: ["AMSmath.js"],
-    // },
+    math: {
+      mathjax:
+        "https://cdn.jsdelivr.net/npm/mathjax@3.2.2/es5/tex-mml-chtml.min.js",
+      config: "TeX-AMS_HTML-full", // See http://docs.mathjax.org/en/latest/config-files.html
+      extensions: ["AMSmath.js"],
+    },
     markdown: {
       smartypants: true,
     },
