--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -75,12 +75,8 @@
               >
                 <span class="fa-stack fa-2x">
                   <!-- <i class="fa-solid fa-circle fa-stack-2x"></i> -->
-                  <i
-                    class="fa-solid fa-file-powerpoint fa-stack-1x fa-inverse"
-                  ></i>
+                  <i class="fa-solid fa-file-powerpoint fa-stack-1x fa-inverse"></i>
                 </span>
-                &nbsp;
-                &nbsp;
               </a>
               <h2 class="card-title">{{ slide.title }}</h2>
             </div>
