--- a/_layouts/mainpage.html
+++ b/_layouts/mainpage.html
@@ -2,17 +2,8 @@
 <html prefix="og: http://ogp.me/ns#">
   <head>
     <title>{{site.title}}</title>
-    <link rel="icon" href="{{ site.baseurl }}/assets/favicon.png" type="image/png" />
-    <meta
-      name="viewport"
-      content="viewport-fit=cover, width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
-    />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="upgrade-insecure-requests: default-src * data: mediastream: blob: filesystem: cdvfile: ws: ms-appdata: ms-appx-web: gap: 'unsafe-inline' 'unsafe-eval';"
-    />
-    <meta name="HandheldFriendly" content="True" />
-    <meta name="MobileOptimized" content="320" />
+    <link rel="icon" href="assets/favicon.png" type="image/png" />
+    {% include meta.html %}
     <link
       rel="stylesheet"
       href="{{ site.baseurl }}/dist/css/all.min.css"
@@ -43,7 +34,7 @@
       }
       .btn-custom-blue {
         background-color: #025F9A; /* Custom blue color #025F9A*/
-        border-color: #007bff; /* Match the border color */
+        /* border-color: #007bff; */
         color: white; /* Text color */
       }
 
@@ -54,12 +45,10 @@
     </style>
   </head>
   <body>
+    <h1 class="center">{{ site.title }}</h1>
     <div class="container center">
       <div class="row row-cols-1 row-cols-md-3 g-4">
       {% for slide in site.slides %}
-          <!-- <script>
-            console.log("Slide Title: {{ slide }}");
-          </script> -->
           <div class="col">
             <div class="card slide-card">
               {% if slide.thumbnail %}
@@ -80,5 +69,7 @@
       {% endfor %}
       </div>
     </div>
+
+    {% include scripts.html %}
   </body>
 </html>
