--- a/_layouts/mainpage.html
+++ b/_layouts/mainpage.html
@@ -2,7 +2,7 @@
 <html prefix="og: http://ogp.me/ns#">
   <head>
     <title>{{site.title}}</title>
-    <link rel="icon" href="assets/favicon.png" type="image/png" />
+    <link rel="icon" href="{{ site.baseurl }}/assets/favicon.png" type="image/png" />
     {% include meta.html %}
     <link
       rel="stylesheet"
