--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -11,7 +11,7 @@
   content="upgrade-insecure-requests: default-src * data: mediastream: blob: filesystem: cdvfile: ws: ms-appdata: ms-appx-web: gap: 'unsafe-inline' 'unsafe-eval';"
 />
 <meta name="HandheldFriendly" content="True" />
-<!-- <meta name="MobileOptimized" content="320" /> -->
-<link rel="stylesheet" href="{{ site.baseurl }}/dist/reveal.css" />
-<link rel="stylesheet" href="{{ site.baseurl }}/dist/theme/{{page.theme}}.css" id="theme" />
-<link rel="stylesheet" href="{{ site.baseurl }}/plugin/highlight/{{page.highlight}}.css" />
+<meta name="MobileOptimized" content="320" />
+<link rel="stylesheet" href="{{site.baseurl}}/dist/reveal.css" />
+<link rel="stylesheet" href="{{site.baseurl}}/dist/theme/{{page.theme}}.css" id="theme" />
+<link rel="stylesheet" href="{{site.baseurl}}/plugin/highlight/{{page.highlight}}.css" />
